--- a/manifest.json
+++ b/manifest.json
@@ -41,4 +41,30 @@
     "outputs" : {},
     "tool_name":"Notification"
   }
+},
+{ 
+  "name" : "irc (java)",
+  "description" : "IRC Client Logging",
+  "author": "Kit Plummer",
+  "version": "1.0",
+  "class": "com.maestrodev.IrcWorker",
+  "type":"java",
+  "dependencies":[
+  {
+	  "name":"maestro-irc-plugin-1.0-SNAPSHOT"
+  }
+  ],
+  "task":{
+    "command" : "/irc/postMessage",    
+    "inputs" : {"body" : {"value" : "", "type" : "String", "required" : "true"},
+		"nickname":{"value" : "", "type" : "String", "required" : "true"},
+		"server":{"value" : "", "type" : "String", "required" : "true"},
+		"password":{"value" : "", "type" : "Password", "required" : "false"},
+		"ssl":{"value" : "", "type" : "Boolean", "required" : "true"},
+		"port":{"value" : "", "type" : "Integer", "required" : "true"},
+		"channel":{"value" : "", "type" : "String", "required" : "true"}															
+	},
+    "outputs" : {},
+    "tool_name":"Notification"
+  }
 }]
