--- a/pom.xml
+++ b/pom.xml
@@ -31,5 +31,40 @@
       <artifactId>maestro-plugin</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
+    <dependency>
+      <groupId>org.mobicents.external.freetts</groupId>
+      <artifactId>freetts</artifactId>
+      <version>1.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.mobicents.external.freetts</groupId>
+      <artifactId>en_us</artifactId>
+      <version>1.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.mobicents.external.freetts</groupId>
+      <artifactId>cmu_time_awb</artifactId>
+      <version>1.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.mobicents.external.freetts</groupId>
+      <artifactId>cmu_us_kal</artifactId>
+      <version>1.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.mobicents.external.freetts</groupId>
+      <artifactId>cmulex</artifactId>
+      <version>1.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.mobicents.external.freetts</groupId>
+      <artifactId>cmutimelex</artifactId>
+      <version>1.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.mobicents.external.freetts</groupId>
+      <artifactId>cmudict04</artifactId>
+      <version>1.0</version>
+    </dependency>
   </dependencies>
 </project>
