make nickname required

--- a/manifest.json
+++ b/manifest.json
@@ -16,7 +16,7 @@
   "task":{
     "command" : "/irc/postMessage",    
     "inputs" : {"body" : {"value" : "", "type" : "String", "required" : true},
-		"nickname":{"value" : "", "type" : "String", "required" : false},
+		"nickname":{"value" : "", "type" : "String", "required" : true},
 		"server":{"value" : "", "type" : "String", "required" : true},
 		"password":{"value" : "", "type" : "Password", "required" : false},
 		"ssl":{"value" : "", "type" : "Boolean", "required" : false},
