--- a/manifest.json
+++ b/manifest.json
@@ -2,12 +2,12 @@
   "name" : "irc (java)",
   "description" : "IRC Client Logging",
   "author": "Kit Plummer",
-  "version": "1.0",
+  "version": "1.1-SNAPSHOT",
   "class": "com.maestrodev.IrcWorker",
   "type":"java",
   "dependencies":[
   	{
-		  "name":"maestro-irc-plugin-1.0-SNAPSHOT.jar"
+		  "name":"maestro-irc-plugin-1.1-SNAPSHOT.jar"
 	  },
     {
       "name":"pom.xml"
@@ -31,12 +31,12 @@
   "name" : "irc confirmation (java)",
   "description" : "Posts an IRC message and waits for confirmation(nickname: [yes|no])",
   "author": "Kit Plummer",
-  "version": "1.0",
+  "version": "1.1-SNAPSHOT",
   "class": "com.maestrodev.IrcWorker",
   "type":"java",
   "dependencies":[
   	{
-		  "name":"maestro-irc-plugin-1.0-SNAPSHOT.jar"
+		  "name":"maestro-irc-plugin-1.1-SNAPSHOT.jar"
 	  },
     {
       "name":"pom.xml"
