--- a/manifest.json
+++ b/manifest.json
@@ -1,58 +1,60 @@
 [{ 
-  "name" : "irc (java)",
-  "description" : "IRC Client Logging",
-  "author": "Kit Plummer",
-  "version": "1.1-SNAPSHOT",
-  "class": "com.maestrodev.IrcWorker",
-  "type":"java",
-  "dependencies":[
-  	{
-		  "name":"maestro-irc-plugin-1.1-SNAPSHOT.jar"
-	  },
-    {
-      "name":"pom.xml"
-    }
-  ],
-  "task":{
-    "command" : "/irc/postMessage",    
-    "inputs" : {"body" : {"value" : "", "type" : "String", "required" : true},
+        "name" : "irc (java)",
+        "description" : "IRC Client Logging",
+        "author": "Kit Plummer",
+        "version": "1.1-SNAPSHOT",
+        "class": "com.maestrodev.IrcWorker",
+        "type":"java",
+        "dependencies":[
+            {
+                "name":"maestro-irc-plugin-1.1-SNAPSHOT.jar"
+            },
+            {
+                "name":"pom.xml"
+            }
+        ],
+        "task":{
+            "command" : "/irc/postMessage",    
+            "inputs" : {"body" : {"value" : "", "type" : "String", "required" : true},
 		"nickname":{"value" : "", "type" : "String", "required" : true},
 		"server":{"value" : "", "type" : "String", "required" : true},
 		"password":{"value" : "", "type" : "Password", "required" : false},
 		"ssl":{"value" : "", "type" : "Boolean", "required" : false},
 		"port":{"value" : "", "type" : "Integer", "required" : true},
-		"channel":{"value" : "", "type" : "String", "required" : true}															
-	},
-    "outputs" : {},
-    "tool_name":"Notification"
-  }
-},
-{ 
-  "name" : "irc confirmation (java)",
-  "description" : "Posts an IRC message and waits for confirmation(nickname: [yes|no])",
-  "author": "Kit Plummer",
-  "version": "1.1-SNAPSHOT",
-  "class": "com.maestrodev.IrcWorker",
-  "type":"java",
-  "dependencies":[
-  	{
-		  "name":"maestro-irc-plugin-1.1-SNAPSHOT.jar"
-	  },
-    {
-      "name":"pom.xml"
-    }
-  ],
-  "task":{
-    "command" : "/irc/postMessageAndWaitForConfirmation",    
-    "inputs" : {"body" : {"value" : "", "type" : "String", "required" : true},
+		"channel":{"value" : "", "type" : "String", "required" : true},
+                "ignore_failure":{"value" : false, "type" : "Boolean", "required" : false}
+            },
+            "outputs" : {},
+            "tool_name":"Notification"
+        }
+    },
+    { 
+        "name" : "irc confirmation (java)",
+        "description" : "Posts an IRC message and waits for confirmation(nickname: [yes|no])",
+        "author": "Kit Plummer",
+        "version": "1.1-SNAPSHOT",
+        "class": "com.maestrodev.IrcWorker",
+        "type":"java",
+        "dependencies":[
+            {
+                "name":"maestro-irc-plugin-1.1-SNAPSHOT.jar"
+            },
+            {
+                "name":"pom.xml"
+            }
+        ],
+        "task":{
+            "command" : "/irc/postMessageAndWaitForConfirmation",    
+            "inputs" : {"body" : {"value" : "", "type" : "String", "required" : true},
 		"nickname":{"value" : "", "type" : "String", "required" : false},
 		"server":{"value" : "", "type" : "String", "required" : true},
 		"password":{"value" : "", "type" : "Password", "required" : false},
 		"ssl":{"value" : "", "type" : "Boolean", "required" : false},
 		"port":{"value" : "", "type" : "Integer", "required" : true},
-		"channel":{"value" : "", "type" : "String", "required" : true}															
-	},
-    "outputs" : {},
-    "tool_name":"Action"
-  }
-}]
+		"channel":{"value" : "", "type" : "String", "required" : true},
+                "ignore_failure":{"value" : false, "type" : "Boolean", "required" : false}
+            },
+            "outputs" : {},
+            "tool_name":"Action"
+        }
+    }]
