--- a/pom.xml
+++ b/pom.xml
@@ -9,15 +9,17 @@
     <version>1</version>
   </parent>
 
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <slf4j.version>1.5.8</slf4j.version>
+  </properties>
+  
   <artifactId>maestro-irc-plugin</artifactId>
   <version>1.1-SNAPSHOT</version>
 
   <name>maestro-irc-plugin</name>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <slf4j.version>1.5.8</slf4j.version>
-  </properties>
+  
 
   <!-- TODO: should just use the one from parent, but we need to consolidate-->
   <distributionManagement>
@@ -64,6 +66,26 @@
   </dependencies>
   <build>
     <plugins>
+       <plugin>
+           <groupId>com.google.code.maven-replacer-plugin</groupId>
+           <artifactId>maven-replacer-plugin</artifactId>
+           <version>1.4.1</version>
+           <executions>                
+                <execution>
+                    <phase>prepare-package</phase>
+                    <goals>
+                        <goal>replace</goal>
+                    </goals>                    
+                </execution>
+            </executions>
+            <configuration>
+                <file>src/main/resources/manifest.json.mv</file>
+                <outputFile>manifest.json</outputFile>
+                <regex>false</regex>
+                <token>$VERSION$</token>
+                <value>${project.version}</value>
+            </configuration>
+       </plugin>
       <plugin>
         <artifactId>maven-resources-plugin</artifactId>
         <version>2.5</version>
@@ -76,7 +98,7 @@
               <goal>copy-resources</goal>
             </goals>
             <configuration>
-              <outputDirectory>${basedir}/maestro-irc-plugin-${project.version}-bin/src</outputDirectory>
+              <outputDirectory>${basedir}/target/scratch/maestro-irc-plugin-${project.version}-bin/src</outputDirectory>
               <resources>          
                 <resource>
                   <directory>src</directory>
@@ -92,7 +114,7 @@
               <goal>copy-resources</goal>
             </goals>
             <configuration>
-              <outputDirectory>${basedir}/maestro-irc-plugin-${project.version}-bin/jars</outputDirectory>
+              <outputDirectory>${basedir}/target/scratch/maestro-irc-plugin-${project.version}-bin/jars</outputDirectory>
               <resources>
                 <resource>
                   <directory>${basedir}/target/</directory>
@@ -109,7 +131,7 @@
               <goal>copy-resources</goal>
             </goals>
             <configuration>
-              <outputDirectory>${basedir}/maestro-irc-plugin-${project.version}-bin/lib</outputDirectory>
+              <outputDirectory>${basedir}/target/scratch/maestro-irc-plugin-${project.version}-bin/lib</outputDirectory>
               <resources>
                 <resource>
                   <directory>lib</directory>
@@ -125,7 +147,7 @@
               <goal>copy-resources</goal>
             </goals>
             <configuration>
-              <outputDirectory>${basedir}/maestro-irc-plugin-${project.version}-bin/config</outputDirectory>
+              <outputDirectory>${basedir}/target/scratch/maestro-irc-plugin-${project.version}-bin/config</outputDirectory>
               <resources>
                 <resource>
                   <directory>config</directory>
@@ -141,7 +163,7 @@
               <goal>copy-resources</goal>
             </goals>
             <configuration>
-              <outputDirectory>${basedir}/maestro-irc-plugin-${project.version}-bin</outputDirectory>
+              <outputDirectory>${basedir}/target/scratch/maestro-irc-plugin-${project.version}-bin</outputDirectory>
               <resources>
                 <resource>
                   <directory>${basedir}</directory>
@@ -189,6 +211,24 @@
           <repositoryId>maestro-deploy</repositoryId>
         </configuration>
       </plugin>
+      <plugin>
+        <artifactId>maven-clean-plugin</artifactId>
+        <version>2.4.1</version>
+        <configuration>
+        <filesets>
+            <fileset>
+            <directory>${basedir}</directory>
+            <includes>
+                <include>
+                    manifest.json
+                </include>
+            </includes>
+            <followSymlinks>false</followSymlinks>
+            </fileset>
+            
+        </filesets>
+        </configuration>
+    </plugin>
     </plugins>
   </build>
 </project>
