--- a/src/main/resources/manifest.json
+++ b/src/main/resources/manifest.json
@@ -5,29 +5,9 @@
         "version": "${project.version}-${buildNumber}",
         "class": "com.maestrodev.IrcWorker",
         "type":"java",
-        "dependencies":[
-            {
-                "name":"maestro-irc-plugin-${project.version}.jar",
-                "name":"activemq-all-5.5.0.jar",
-                "name":"apollo-util-1.0-beta4.jar",
-                "name":"commons-lang3-3.0.jar",
-                "name":"hawtbuf-1.8.jar",
-                "name":"hawtdispatch-1.6.jar",
-                "name":"hawtdispatch-transport-1.6.jar",
-                "name":"irclib-1.10.jar",
-                "name":"json-simple-1.1.jar",
-                "name":"junit-3.8.1.jar",
-                "name":"log4j-1.2.14.jar",
-                "name":"maestro-irc-plugin-1.1-SNAPSHOT.jar",
-                "name":"maestro-plugin-1.1-20120222.172542-5.jar",
-                "name":"mockito-all-1.9.0.jar",
-                "name":"scala-library-2.9.0-1.jar",
-                "name":"slf4j-api-1.5.8.jar",
-                "name":"slf4j-log4j12-1.5.8.jar",
-                "name":"stompjms-client-1.6.jar",
-                "name":"xpp3_min-1.1.4c.jar",
-                "name":"xstream-1.3.1.jar"
-            }
+        "dependencies" : [
+          {"name" : "maestro-irc-plugin-${project.version}.jar"},
+          {"name" : "pom.xml"}
         ],
         "task":{
             "command" : "/irc/postMessage",    
@@ -51,29 +31,9 @@
         "version": "${project.version}-${buildNumber}",
         "class": "com.maestrodev.IrcWorker",
         "type":"java",
-        "dependencies":[
-            {
-                "name":"maestro-irc-plugin-${project.version}.jar",
-                "name":"activemq-all-5.5.0.jar",
-                "name":"apollo-util-1.0-beta4.jar",
-                "name":"commons-lang3-3.0.jar",
-                "name":"hawtbuf-1.8.jar",
-                "name":"hawtdispatch-1.6.jar",
-                "name":"hawtdispatch-transport-1.6.jar",
-                "name":"irclib-1.10.jar",
-                "name":"json-simple-1.1.jar",
-                "name":"junit-3.8.1.jar",
-                "name":"log4j-1.2.14.jar",
-                "name":"maestro-irc-plugin-1.1-SNAPSHOT.jar",
-                "name":"maestro-plugin-1.1-20120222.172542-5.jar",
-                "name":"mockito-all-1.9.0.jar",
-                "name":"scala-library-2.9.0-1.jar",
-                "name":"slf4j-api-1.5.8.jar",
-                "name":"slf4j-log4j12-1.5.8.jar",
-                "name":"stompjms-client-1.6.jar",
-                "name":"xpp3_min-1.1.4c.jar",
-                "name":"xstream-1.3.1.jar"
-            }
+        "dependencies" : [
+           {"name" : "maestro-irc-plugin-${project.version}.jar"},
+           {"name" : "pom.xml"}
         ],
         "task":{
             "command" : "/irc/postMessageAndWaitForConfirmation",    
