MAESTRO-3162 Images, default image

--- a/src/main/resources/manifest.json
+++ b/src/main/resources/manifest.json
@@ -1,4 +1,6 @@
-[ {
+{
+  "image": "irc.png",
+  "tasks": [{
   "name" : "irc",
   "description" : "IRC Notifications",
   "author" : "Kit Plummer",
@@ -80,3 +82,4 @@
     }
   } ]
 } ]
+}
